--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,3 +2,6 @@ version: 1.0.{build}
 os: Visual Studio 2015
 build:
   verbosity: detailed
+
+init:
+- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
