--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,9 @@
 version: 1.0.{build}
 os: Visual Studio 2015
-build:
-  verbosity: detailed
 
+build_script:
+  - build CI
+
+test: off
 init:
 - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
